Improve the addNewBlog program

--- a/html/static/css/custom.css
+++ b/html/static/css/custom.css
@@ -191,6 +191,9 @@ body {
 
 }
 
+.v-md-textarea-editor textarea{
+	height: 100% !important;
+}
 
 /*-----Text-----*/
 .custom-text {
@@ -237,6 +240,8 @@ body {
 	background: content-box !important;
 	border: none !important;
 }
+
+
 
 
 @media screen and (max-width: 768px) {
@@ -406,3 +411,5 @@ body {
     .typo table th, .typo table td, .typo-table th, .typo-table td .typo table caption {
          padding: 0.5em;
      }
+
+
